Hotfix for z-index bug on button.

--- a/resources/assets/styles/gutenburg/_block-card.scss
+++ b/resources/assets/styles/gutenburg/_block-card.scss
@@ -81,6 +81,7 @@
     a,
     a:visited {
       &::after {
+        z-index: 1;
         position: absolute;
         top: -$golden-ratio-2;
         right: $golden-ratio-3;
